[tool.poetry]
name = "p1-starting-an-api-wisebaldone"
version = "0.1.0"
description = ""
authors = ["Evan Hughes <uqehugh3@uq.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
